--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,19 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:design:23.2.0'
+    compile 'com.android.support:cardview-v7:23.2.0'
+    compile 'com.android.support:recyclerview-v7:23.2.0'
+
+//  butterknife
+    compile 'com.jakewharton:butterknife:7.0.1'
+
+//    retrofit
+//    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.retrofit2:retrofit:2.0.0'
+
+
+//    picasso
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
 }
