--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
+//    sticky headers
+    compile 'com.tonicartos:superslim:0.4.13'
+
 }
 buildscript {
     ext.kotlin_version = '1.0.1-2'
